{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 9,
  "lineage": "471ce65c-0fa9-4ec1-5eac-8fd9ddcb261b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-0dd709ce76edbd547",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd709ce76edbd547",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d33a09b2bbb199ba"
              }
            ],
            "primary_network_interface_id": "eni-0d33a09b2bbb199ba",
            "private_dns": "ip-172-31-9-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.207",
            "public_dns": "ec2-13-220-17-30.compute-1.amazonaws.com",
            "public_ip": "13.220.17.30",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0194480e4e868c38a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c86de2469dda9a62",
            "tags": {
              "Name": "Dummy Ec2-us-east-1a"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04718099a14e6df6f",
              "sg-08f905ec421985031"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-0dd709ce76edbd547",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-08136c1760bd892a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08136c1760bd892a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e058a8eb572b7003"
              }
            ],
            "primary_network_interface_id": "eni-0e058a8eb572b7003",
            "private_dns": "ip-172-31-82-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.82.195",
            "public_dns": "ec2-54-173-240-146.compute-1.amazonaws.com",
            "public_ip": "54.173.240.146",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07c010874a9f1aed7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0895b5f0327d6bf33",
            "tags": {
              "Name": "Dummy Ec2-us-east-1b"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04718099a14e6df6f",
              "sg-08f905ec421985031"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-08136c1760bd892a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-0f9a282194b0c81cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9a282194b0c81cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a1d97b6e821f7d71"
              }
            ],
            "primary_network_interface_id": "eni-0a1d97b6e821f7d71",
            "private_dns": "ip-172-31-30-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.81",
            "public_dns": "ec2-3-93-165-210.compute-1.amazonaws.com",
            "public_ip": "3.93.165.210",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09ccdc43cd7069d0d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0856e57739674998b",
            "tags": {
              "Name": "Dummy Ec2-us-east-1c"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04718099a14e6df6f",
              "sg-08f905ec421985031"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-0f9a282194b0c81cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-02001dfe761252fee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02001dfe761252fee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b7b09b1f6b9a3d77"
              }
            ],
            "primary_network_interface_id": "eni-0b7b09b1f6b9a3d77",
            "private_dns": "ip-172-31-32-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.194",
            "public_dns": "ec2-34-239-49-206.compute-1.amazonaws.com",
            "public_ip": "34.239.49.206",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a5bca3b36ac7bf8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056dee5cff72e9164",
            "tags": {
              "Name": "Dummy Ec2-us-east-1d"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04718099a14e6df6f",
              "sg-08f905ec421985031"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-02001dfe761252fee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-074a5e6de447f29af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074a5e6de447f29af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02aee0e865013c639"
              }
            ],
            "primary_network_interface_id": "eni-02aee0e865013c639",
            "private_dns": "ip-172-31-67-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.67.101",
            "public_dns": "ec2-44-197-230-196.compute-1.amazonaws.com",
            "public_ip": "44.197.230.196",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b97a4a023b22ef01",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06878dd8d888d1ef4",
            "tags": {
              "Name": "Dummy Ec2-us-east-1f"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04718099a14e6df6f",
              "sg-08f905ec421985031"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-074a5e6de447f29af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020442:security-group/sg-08f905ec421985031",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f905ec421985031",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 22 in Inbound Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_ssh",
            "name_prefix": "",
            "owner_id": "787230020442",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254f99aab7df53e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "sg-08f905ec421985031",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020442:security-group/sg-04718099a14e6df6f",
            "description": "Allow web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04718099a14e6df6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 443 in Inbound Rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80 in Inbound Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": "",
            "owner_id": "787230020442",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffice"
            },
            "tags_all": {
              "Name": "allow_web_traffice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254f99aab7df53e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "sg-04718099a14e6df6f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}